--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -41,7 +41,6 @@
     <storage android:mountPoint="/storage/external_SD"
                 android:storageDescription="@string/storage_sd_card"
                 android:primary="false"
-                android:removable="true"
-                android:allowMassStorage="true" />
+                android:removable="true" />              
 </StorageList>
 
